--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "serve": "gatsby serve",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "serve": "gatsby serve"
   },
   "dependencies": {
-    "gatsby": "^2.19.17",
+    "gatsby": "^2.19.21",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-feed": "^2.3.27",
-    "gatsby-plugin-google-analytics": "^2.1.35",
+    "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.4.5",
@@ -27,7 +26,7 @@
     "gatsby-remark-responsive-iframe": "^2.2.32",
     "gatsby-remark-smartypants": "^2.1.21",
     "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.51",
+    "gatsby-transformer-remark": "^2.6.53",
     "gatsby-transformer-sharp": "^2.3.14",
     "horizon-prismjs-theme": "^1.0.4",
     "prismjs": "^1.19.0",
@@ -36,11 +35,8 @@
     "react-helmet": "^5.2.1",
     "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.2",
     "typography": "^0.16.19"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "gh-pages": "^2.2.0"
-  }
+  "license": "MIT"
 }
