--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Runtime data
 pids
@@ -66,4 +68,4 @@ yarn-error.log
 # Yarn Integrity file
 .yarn-integrity
 
-.now
+.netlify/
