--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@narative/gatsby-theme-novela": "^0.*",
-    "gatsby": "^2.20.2",
-    "gatsby-plugin-manifest": "^2.2.4",
+    "@narative/gatsby-theme-novela": "^0.14.0",
+    "gatsby": "^2.20.22",
+    "gatsby-plugin-manifest": "^2.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "typescript": "^3.8.3"
